k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jonas-python-app
  labels:
    app: jonas-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jonas-python-app
  template:
    metadata:
      labels:
        app: jonas-python-app
    spec:
      containers:
        - name: jonas-python-app
          image: quay.io/jonasbjork/jonas-python-app:1.0.2-8f0b570
          ports:
          - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
