k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jonas-python-app
  labels:
    app: jonas-python-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jonas-python-app
